k8s/namespace-extalia.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 'extalia'
  labels:
    name: 'extalia'
