k8s/statefulset-mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: mongodb
      tolerations:
        - key: dedicated
          operator: Equal
          value: mongodb
          effect: NoSchedule
      containers:
        - name: mongodb
          image: mongo:4
          ports:
            - containerPort: 27017
          livenessProbe:
            exec:
              command: ['mongo', '--eval', 'db.runCommand("ping").ok']
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            exec:
              command: ['mongo', '--eval', 'db.runCommand("ping").ok']
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: '1'
              memory: '2Gi'
            limits:
              cpu: '2'
              memory: '4Gi'
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: sws
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
  type: ClusterIP
