k8s/statefulset-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    app: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: redis
      tolerations:
        - key: dedicated
          operator: Equal
          value: redis
          effect: NoSchedule
      containers:
        - env:
            - name: REDISTIMESERIES_ARGS
              value: '"RETENTION_POLICY=20"'
          image: redislabs/rejson:2.0.6
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 10
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
          resources:
            requests:
              cpu: '0.2'
              memory: 128Mi
            limits:
              cpu: '0.5'
              memory: '256Mi'
      #     volumeMounts:
      #     - name: redis-data
      #       mountPath: /data
      # volumes:
      # - name: redis-data
      #   persistentVolumeClaim:
      #     claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
