k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-manager
  namespace: workspace
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: wokspace.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
